[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "openlineage_sql"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
