[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "openlineage_sql"
version = "1.28.0"
description = "Python interface for the Rust OpenLineage lineage extraction library"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
  "openlineage",
]
authors = [{ name = "OpenLineage"}]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
