[package]
name = "openlineage_sql"
description = "Library extracting source and destination tables from sql statements"
version = "1.4.1"
edition = "2021"
authors = ["Maciej Obuchowski <obuchowski.maciej@gmail.com>", "Piotr Wojtczak <piotr.m.wojtczak@gmail.com"]
keywords = ["sql", "lineage", "openlineage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "openlineage_sql"
crate-type = ["rlib"]

[dependencies]
anyhow = {workspace = true}

sqlparser = {git = "https://github.com/OpenLineage/sqlparser-rs/", branch = "release"}